Issue #24 - Still not working on Openshift trying next fix.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -86,6 +86,7 @@ footer .widget {
 
 // Align icons with text using baseline alignment
 [class^="icon-"], [class*=" icon-"] {
+  font-family: FontAwesome;
   vertical-align: baseline;
 }
 
